# wonder-2025-08

./: .gitignore  README.md
wonder-editor/: CLAUDE.md  CURSOR_DEBUGGING.md  Cargo.toml  DEBUGGING_SUMMARY.md  INTEGRATION_CHECKLIST.md  LINEAR_TICKETS.md  MVP_PLAN.md  REQUIREMENTS.md  REQUIREMENTS_FINAL.md  debug_cursor.rs  example_markdown.md  temp_test.rs  test_debug.rs  test_large_1mb.md  test_medium_100kb.md  test_positioning.md
wonder-editor/src/: app.rs  benchmarks.rs  editor.rs  hybrid_editor_element.rs  hybrid_renderer.rs  hybrid_renderer_backup.rs  lib.rs  main.rs  markdown_parser.rs  preview_renderer.rs  test_helpers.rs  text_buffer.rs
wonder-editor/src/core/: command_history.rs  commands.rs  coordinate_mapping.rs  cursor.rs  cursor_movement.rs  cursor_wrapping_tests.rs  mod.rs  mode_manager.rs  point.rs  scroll_state.rs  selection.rs  test_undo_integration.rs  text_document.rs  viewport.rs
wonder-editor/src/editor/: cursor_diagnostics.rs  element.rs  element_wrapping_tests.rs  gpui_traits.rs  keyboard.rs  mod.rs  mouse.rs  mouse_wrapping_tests.rs  rendering.rs  scroll_integration_tests.rs
wonder-editor/src/editor/tests/: basic_editor.rs  helpers.rs  keyboard.rs  mod.rs  mouse.rs  selection.rs
wonder-editor/src/input/: actions.rs  commands.rs  input_event.rs  keyboard_handler.rs  keymap.rs  mod.rs  router.rs
wonder-editor/src/rendering/: coordinate_mapping.rs  layout.rs  line_wrapping.rs  mod.rs  style_context.rs  text_content.rs  text_runs.rs  token_mode.rs  typography.rs  visual_line_manager.rs
