[package]
name = "wonder-editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "wonder_editor"
path = "src/lib.rs"

[[bin]]
name = "wonder-editor"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.10"
ropey = "1.6"
regex = "1.10"

[dev-dependencies]
env_logger = "0.11"
